fix modules & assignments styling, modules visibility

--- a/src/Kanbas/Courses/Assignments/index.css
+++ b/src/Kanbas/Courses/Assignments/index.css
@@ -22,14 +22,10 @@
 }
 
 .assignments-buttons {
-  display: flex;
+  display: inline-flex;
   justify-content: flex-end;
   padding-top: 20px;
   margin: 10px 0px 10px 0px;
-}
-
-.assignments-buttons-hr {
-  margin-bottom: 40px;
 }
 
 .assignments-buttons > button {
@@ -59,6 +55,10 @@
   background-color: darkred;
 }
 
+.assignments-buttons-hr {
+  margin-bottom: 40px;
+}
+
 .wd-assignments,
 .wd-assignments * {
   border-radius: 0%;
@@ -68,46 +68,58 @@
   list-style: none;
 }
 
-.assignment-text {
-  margin-right: auto;
-  margin-left: 20px;
-}
-
 .wd-assignments > li {
   border: 1px solid gray;
   border-left: 4px solid green !important;
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 0px 10px 5px;
 }
 
 .assignment-title {
   background-color: lightgray;
   font-weight: bold;
   color: #3d454c;
-  padding: 10px 0px 10px 5px;
 }
 
-.assignment-item {
-  padding: 10px 0px 10px 5px;
+.assignment-item-buttons {
+  display: inline-flex;
+}
+
+.assignment-item-buttons > button {
+  background-color: transparent;
+  border: none;
+  color: #3d454c;
+}
+
+.assignment-text-container {
+  margin-right: auto;
+  margin-left: 20px;
+}
+
+.assignment-text,
+.assignment-item-title {
+  width: 100%;
+  white-space: normal !important;
 }
 
 .assignment-info {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .assignment-item-title {
   text-decoration: none;
   color: #3d454c;
   font-weight: bold;
+  white-space: normal !important;
+  width: 100% !important;
 }
 
 .assignment-item-due-date {
   font-size: small;
-}
-
-.assignment-item-due-date > span {
   color: #3d454c;
 }
 
@@ -123,8 +135,12 @@
   margin-right: 10px;
 }
 
-.assignment-item-buttons > button {
-  background-color: transparent;
+.assignment-buttons-right {
+  margin-left: 20px;
+}
+
+.assignment-buttons-right > button:last-child {
+  margin-left: 10px;
 }
 
 @media (max-width: 991px) {
